--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <title>Project JAW</title>
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome!</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+</head>
 
-    </body>
+<body>
+    <div class="container">
+        <div id="override"class="bootstrapOverrides jumbotron">
+            <div class="container">
+                <h1 class="display-4">Project JAW</h1>
+                <p class="lead">Search for recipes including the food you have in your kitchen or recipes that only have the ingredients you have. 
+                </p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Main Site</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+</body>
+
 </html>
