--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
 </head>
 
 <body>
-       
+
     <div class="container">
-         <div id="override"class="bootstrapOverrides jumbotron">
-                <div class="formBody">
-                    <h1 class="display-4">Project JAW</h1>
-                    <p class="lead">Search for recipes including the food you have in your kitchen or recipes that only have the ingredients you have. 
-                    </p>
-                    <p class="lead">
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Main Site</a>
-                    </p>
-                </div>
+
+        <div id="override" class="bootstrapOverrides jumbotron">
+            <div class="formBody">
+                <h1 class="display-4">Project JAW</h1>
+                <p class="lead">Search for recipes including the food you have in your kitchen or recipes that only have
+                    the ingredients you have.
+                </p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Main Site</a>
+                </p>
             </div>
+        </div>
     </div>
 
     <footer class="page-footer font-small blue">
@@ -35,7 +37,7 @@
         <div class="footer-copyright text-center py-3">2018 Project JAW
         </div>
         <!-- Copyright -->
-    
+
     </footer>
 </body>
 
