update to files

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <!-- Copyright -->
     
     </footer>
+
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
 </body>
 
 </html>
