--- a/search.html
+++ b/search.html
@@ -7,24 +7,35 @@
 </head>
 
 <body>
-    <div class="logo-container">
-        <div class="row">
-            <div class="col-sm-4">
-                <h1>logo here</h1>
-            </div>
-            <div class="col-sm-6">
-                <form class="form-inline md-form form-sm active-cyan-2 mt-2">
-                    <input class="form-control form-control-sm mr-3 w-75" id="searchBar" type="text" placeholder="Search"
-                        aria-label="Search">
-                    <i class="fas fa-search" aria-hidden="true"></i>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-            <div class="col-sm-2">
-                <button type="button" class="btn">Button here</button>
+    <div id="backgroundSearch">
+    <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <h1>logo here</h1>
+                </div>
+                <div class="col-sm-6">
+                    <form class="form-inline md-form form-sm active-cyan-2 mt-2">
+                        <input class="form-control form-control-sm mr-3 w-75" id="searchBar" type="text"
+                            placeholder="Search" aria-label="Search">
+                        <i class="fas fa-search" aria-hidden="true"></i>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+                <div class="col-sm-2">
+                    <button type="button" class="btn">Button here</button>
+                </div>
             </div>
         </div>
     </div>
+
+    <footer class="page-footer font-small blue">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">2018 Project JAW
+        </div>
+        <!-- Copyright -->
+
+    </footer>
 
     <div class="results"></div>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
