--- a/signin.html
+++ b/signin.html
@@ -19,52 +19,55 @@
 </head>
 
 <body>
-    <div container-fluid>
-        <div id="background"></div>
-    </div>
-    <div class="logo-container">
+    <div id="backgroundSign">
+        <div class="container-fluid">
 
-        <div class="row">
-            <div>
+
+
+            <div class="logo-container">
                 <h3>Our Logo Here</h3>
             </div>
-            <div>
-                <div class="jumbotron" id="signInJumbo">
-                    <h3>Message Hello</h3>
-                </div>
+
+            <div id="signInJumbo">
+                <h3>Message Hello</h3>
             </div>
-            <div>
+
+            <div id="signButton">
                 <h3>create sign up</h3>
             </div>
-        </div>
-    </div>
 
-    <div class="input-container" id="signInBody">
 
-        <div>
-            <form>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Username</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter Username">
+            <div id="signInBody">
+
+                <div>
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Username</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Enter Username">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                placeholder="Enter Password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter Password">
-                </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-            </form>
+            </div>
+
+
         </div>
+
+        <footer class="page-footer font-small blue">
+
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">2018 Project JAW
+            </div>
+            <!-- Copyright -->
+
+        </footer>
     </div>
-    <footer class="page-footer font-small blue">
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">2018 Project JAW
-        </div>
-        <!-- Copyright -->
-
-    </footer>
-
 
 </body>
 
