--- a/signup.html
+++ b/signup.html
@@ -19,51 +19,53 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="signupbody">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="logo"></div>
-                </div>
-            </div>
-            <div class="inputContainer">
+    <div id="backgroundSignUp">
+        <div class="container">
+            <div id="signupbody">
                 <div class="row">
-                    <div class="col-lg-12" id="signUpText">
-                        <h1>Sign up</h1>
+                    <div class="col-md-4">
+                        <div class="logo"></div>
                     </div>
                 </div>
-
-                <div class="row" id="editRow">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="username">Create Username</label>
-                            <input type="text" class="form-control" id="usernameInput" placeholder="Username">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="password">Create Password</label>
-                            <input type="password" class="form-control" id="passwordInput" placeholder="Password">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="password">Re-Enter Password</label>
-                            <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+                <div class="inputContainer">
+                    <div class="row">
+                        <div class="col-lg-12" id="signUpText">
+                            <h1>Sign up</h1>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-dark" id="submitBtn">Submit</button>
+
+                    <div class="row" id="editRow">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="username">Create Username</label>
+                                <input type="text" class="form-control" id="usernameInput" placeholder="Username">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="password">Create Password</label>
+                                <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="password">Re-Enter Password</label>
+                                <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-dark" id="submitBtn">Submit</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <footer class="page-footer font-small blue">
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">2018 Project JAW
-    </div>
-    <!-- Copyright -->
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">2018 Project JAW
+        </div>
+        <!-- Copyright -->
 
-</footer>
+    </footer>
 </body>
 
 
