--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="backgroundSearch">
-        <div class="container-fluid">
+        <div class="container-fluid" id="searchContainer">
             <div id="flex">
                 <div>
                     <h1>logo here</h1>
@@ -38,16 +38,16 @@
 
         </div>
 
+        <footer class="page-footer font-small blue">
+    
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">2018 Project JAW
+            </div>
+            <!-- Copyright -->
+    
+        </footer>
     </div>
 
-    <footer class="page-footer font-small blue">
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">2018 Project JAW
-        </div>
-        <!-- Copyright -->
-
-    </footer>
 
 
 
