updated auth + buttons + id

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome!</title>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <script type="text/javascript" src="assets/javascript/javascript.js"></script>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
@@ -26,7 +26,7 @@
                         the ingredients you have.
                     </p>
                     <p class="lead">
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Main Site</a>
+                        <a class="btn btn-primary btn-lg" href="./signin.html" role="button">Main Site</a>
                     </p>
                 </div>
             </div>
@@ -43,6 +43,8 @@
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-auth.js"></script>
 </body>
 
 </html>
