--- a/signin.html
+++ b/signin.html
@@ -33,7 +33,9 @@
             </div>
 
             <div id="signButton">
-                <h3>create sign up</h3>
+                <li class="nav-link">
+                <h3><a class="active" href="./signup.html">sign up</h3></a>
+                </li>
             </div>
 
 
@@ -51,7 +53,7 @@
                             <input type="password" class="form-control" id="exampleInputPassword1"
                                 placeholder="Enter Password">
                         </div>
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary" id="login">Login</button>
                     </form>
                 </div>
             </div>
@@ -69,6 +71,9 @@
         </footer>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-auth.js"></script>
 </body>
 
 
