--- a/signup.html
+++ b/signup.html
@@ -45,11 +45,6 @@
                                 <label for="password">Create Password</label>
                                 <input type="password" class="form-control" id="passwordInput" placeholder="Password">
                             </div>
-
-                            <div class="form-group">
-                                <label for="password">Re-Enter Password</label>
-                                <input type="password" class="form-control" id="passwordInput" placeholder="Password">
-                            </div>
                         </div>
                         <button type="submit" class="btn btn-dark" id="submitBtn">Submit</button>
                     </div>
@@ -73,7 +68,9 @@
 
 <!-- Footer -->
 
-<!-- <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script> Include after -->
-<script type="text/javascript" src="./assets/javascript/java.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-auth.js"></script>
+<script type="text/javascript" src="./assets/javascript/javascript.js"></script>
 
 </html>
