--- a/signin.html
+++ b/signin.html
@@ -53,7 +53,7 @@
                             <input type="password" class="form-control" id="exampleInputPassword1"
                                 placeholder="Enter Password">
                         </div>
-                        <button type="submit" class="btn btn-primary" id="login">Login</button>
+                        <button type="submit" class="btn btn-primary" id="login"><a href="./search.html"> Login</a></button>
                     </form>
                 </div>
             </div>
@@ -74,6 +74,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-auth.js"></script>
+    <script src="assets/javascript/javascript.js"></script>
 </body>
 
 
